remove unnecessary lin
Signed-off-by: David Nanjila <nanjiladavid2@gmail.com>

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
 
         <footer>
-            <p>Built with HTML5, CSS3 & JavaScript | <a href="color-memory-game.html">Try Color Memory Game</a></p>
+            <p>Built with HTML5, CSS3 & JavaScript</p>
         </footer>
     </div>
 
