Update the footer with social links
Signed-off-by: David Nanjila <nanjiladavid2@gmail.com>

--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
         </div>
 
         <footer>
-            <p>Built with HTML5, CSS3 & JavaScript</p>
+            <p>Built with HTML5, CSS3 & JavaScript | <a href="color-memory-game.html">Try Color Memory Game</a></p>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/david-nanjila/" target="_blank">LinkedIn</a> |
+                <a href="https://github.com/stoicdavi/" target="_blank">GitHub</a> |
+                <a href="https://x.com/DavidNanji9396" target="_blank">X (Twitter)</a>
+            </div>
         </footer>
     </div>
 
