--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
 
         <footer>
-            <p>Built with HTML5, CSS3 & JavaScript | <a href="color-memory-game.html">Try Color Memory Game</a></p>
+            <p>Built with HTML5, CSS3 & JavaScript </p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/david-nanjila/" target="_blank">LinkedIn</a> |
                 <a href="https://github.com/stoicdavi/" target="_blank">GitHub</a> |
