--- a/game.html
+++ b/game.html
@@ -16,6 +16,7 @@
             <div>Wave: <span id="wave">1</span></div>
             <div>Humans: <span id="humans">8</span></div>
             <div>Lives: <span id="lives">3</span></div>
+            <button class="sound-toggle" id="soundToggle" onclick="toggleSound()">🔊</button>
         </div>
         
         <canvas id="gameCanvas" width="800" height="600"></canvas>
@@ -31,6 +32,7 @@
         </div>
     </div>
 
+    <script src="sounds.js"></script>
     <script src="game.js"></script>
     <script>
         function goHome() {
