--- a/game.html
+++ b/game.html
@@ -30,6 +30,14 @@
             <p>Final Score: <span id="finalScore">0</span></p>
             <p>Press SPACE to restart</p>
         </div>
+        
+        <div class="congratulations" id="congratulations">
+            <div class="congrats-content">
+                <h2 id="congratsTitle">🎉 CONGRATULATIONS! 🎉</h2>
+                <p id="congratsMessage">Achievement Unlocked!</p>
+                <div class="congrats-details" id="congratsDetails"></div>
+            </div>
+        </div>
     </div>
 
     <script src="sounds.js"></script>
